made nav fixed; corrected positioning and spacing of header; simplified html structure of header

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,6 @@
 .header {
-  /* height: 400px; */
+  height: 400px;
+  margin-top: 120px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -9,5 +10,5 @@
   background-image: url('../images/diagonal-noise.png');
 }
 .header .avatar {
-  margin-top: 120px;
+  
 }
