--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,6 @@
 nav {
-  position: absolute;
+  position: fixed;
+  top: 0;
   
   color: white;
   background-color: #4056A1;
